<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/homescreen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/merriweather_bold"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/notification_description"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/homescreen_title"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#BABABA" />

    <TextView
        android:id="@+id/now_showing_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/now_showing"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homescreen_title" />

    <ImageView
        android:id="@+id/action_toggle_theme"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_theme"
        app:layout_constraintEnd_toStartOf="@+id/notification_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/homescreen_title"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="35dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="96dp"
        android:contentDescription="@string/location_description"
        android:src="@drawable/ic_location"
        app:layout_constraintEnd_toStartOf="@+id/homescreen_title"
        app:layout_constraintTop_toTopOf="parent"
         />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/now_showing_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="6dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/movie_item" />

    <TextView
        android:id="@+id/popular_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="6dp"
        android:text="@string/popular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_showing_recyclerview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_showing_recyclerview"
        tools:listitem="@layout/movie_item" />

    <TextView
        android:id="@+id/top_rated_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="6dp"
        android:text="@string/top_rated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_recyclerview" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_rated_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_recyclerview"
        tools:listitem="@layout/movie_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

